login with jwt and logout

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -285,7 +285,7 @@
 //   }
 
 .primary-purple{
-  background-color:#d512f6
+  background-color:#ec6a15
 }
 .mat-toolbar {
   color: rgba(18, 5, 5, 0.87);
