--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -66,11 +66,11 @@
   </h1>
     <span class="menu-spacer"></span>
     <div>
-      <a mat-button [routerLink]="'/login'" routerLinkActive="active"> Login </a>
-      <a mat-button [routerLink]="'/register'" routerLinkActive="active"> Create Account </a>
+      <a mat-button [routerLink]="'/login'" *ngIf="!authService.loggedIn()" routerLinkActive="active"> Login </a>
+      <a mat-button (click)="authService.loggedOut()" *ngIf="authService.loggedIn()" routerLinkActive="active"> Logout </a>
+      <a mat-button [routerLink]="'/register'" *ngIf="!authService.loggedIn()"  routerLinkActive="active"> Create Account </a>
       <a mat-button [routerLink]="'/events'" routerLinkActive="active"> Events </a>
       <a mat-button [routerLink]="'/special-events'" routerLinkActive="active"> Special-events </a>
-
     </div>
   </mat-toolbar-row>
 </mat-toolbar>
@@ -78,8 +78,9 @@
 <mat-sidenav-container>
   <mat-sidenav #sidenav>
     <mat-nav-list>
-      <a mat-list-item [routerLink]="'/login'" routerLinkActive="active"> Login </a>
-      <a mat-list-item [routerLink]="'/register'" routerLinkActive="active"> Create Account </a>
+      <a mat-list-item [routerLink]="'/login'" *ngIf="!authService.loggedIn()" routerLinkActive="active"> Login </a>
+      <a mat-list-item (click)="authService.loggedOut()" *ngIf="authService.loggedIn()" routerLinkActive="active"> Logout </a>
+      <a mat-list-item [routerLink]="'/register'" *ngIf="!authService.loggedIn()"  routerLinkActive="active"> Create Account </a>
       <a mat-list-item [routerLink]="'/events'" routerLinkActive="active"> Events </a>
       <a mat-list-item [routerLink]="'/special-events'" routerLinkActive="active"> Special-events </a>
       <a mat-list-item (click)="sidenav.toggle()" href="" mat-list-item>Close</a>
